--- a/buildspecs/deployspec.yaml
+++ b/buildspecs/deployspec.yaml
@@ -11,7 +11,8 @@ phases:
   build:
     commands:
       - sam build
-      - sam deploy --no-fail-on-empty-changeset
+      # - sam deploy --no-fail-on-empty-changeset
+      - sam deploy --guided
       - cd front-end-react
       - npm install
       - npm run build
