--- a/buildspecs/deployspec.yaml
+++ b/buildspecs/deployspec.yaml
@@ -16,4 +16,4 @@ phases:
       - cd front-end-react
       - npm install
       - npm run build
-      - aws s3 sync --acl public-read build s3://<nama><angka>-trivia-app-bucket/
+      - aws s3 sync --acl public-read build s3://bias01-trivia-app-bucket/
